2001-06-13  Radek Doulik  <rodo@ximian.com>

	* properties.c (gtk_html_edit_properties_dialog_new): set default
	button to 0 (Insert/Ok)

	* cell.c: use disable_change

	* table.c (get_data): set has_width to FALSE if needed

	* rule.c (rule_widget): show rule widget

	* table.c: use disable_change

2001-05-30  Radek Doulik  <rodo@ximian.com>

	* cell.c (get_data): get width

2001-05-29  Larry Ewing  <lewing@ximian.com>

	* control-data.h: add placeholders for the persist interfaces.

	* editor-control-factory.c (editor_control_construct): initialize
	the persist interfaces.
	
2001-05-29  Radek Doulik  <rodo@ximian.com>

	* Makefile.am: removed dependency on libglade-xgettext
	(gnome_gtkhtml_editor_SOURCES): removed
	gtkhtml-editor-properties.c

2001-05-24  Radek Doulik  <rodo@ximian.com>

	* GNOME_GtkHTML_Editor.xml: split edit menu to placeholders

	* replaced HTML_VALIGN_CENTER with HTML_VALIGN_MIDDLE everywhere

	* image.c: replaced center align with middle

2001-05-22  Radek Doulik  <rodo@ximian.com>

	* table.c: added disable_change flag
	(set_ui): use disable_change flag

	* engine.c (impl_get_paragraph_data): dup value on return (pointed
	out by mla@1012surf.net)

2001-05-17  Radek Doulik  <rodo@ximian.com>

	* table.c (table_widget): use engine's window to allocate color

2001-05-15  Radek Doulik  <rodo@ximian.com>

	* Makefile.am (gtkhtml-editor-properties.h): added
	gtkhtml-editor-properties.c:	gtkhtml-editor-properties.h
	dependency

	* added Format/HTML mode menu item to test application

2001-05-12  Almer S. Tigelaar  <almer@gnome.org>

	* text.c (color_changed): Adjust signal callback for new
	by_user flag.

	* body.c (color_changed): Idem and don't change the color
	if we changed it ourselves programatically.

	* toolbar.c (color_changed): Same as for body.c.

2001-05-11  Gediminas Paulauskas <menesis@delfi.lt>

	* body.c, paragraph.c, popup.c: marked 30 strings for translation.

	* test-html-editor-control.c: initialize gettext to test